finished tuning for pde nmer const all years and obtained results

--- a/src/run_baseline_mlp_allyears.ipynb
+++ b/src/run_baseline_mlp_allyears.ipynb
@@ -173,7 +173,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f6669d71fb0>"
+       "<torch._C.Generator at 0x7f3d4c1b9fb0>"
       ]
      },
      "execution_count": 6,
@@ -210,7 +210,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f6669d71fb0>"
+       "<torch._C.Generator at 0x7f3d4c1b9fb0>"
       ]
      },
      "execution_count": 7,
@@ -1260,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1355,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1363,107 +1363,106 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/50\n",
-      "Epoch 1/50 - Train Loss: 0.025931 - Val Loss (simple RMSE, no physics involved): 0.091189\n",
+      "Epoch 1/50 - Train Loss: 0.026046 - Val Loss (simple RMSE, no physics involved): 0.092759\n",
       "Epoch 2/50\n",
-      "Epoch 2/50 - Train Loss: 0.008366 - Val Loss (simple RMSE, no physics involved): 0.068853\n",
+      "Epoch 2/50 - Train Loss: 0.008439 - Val Loss (simple RMSE, no physics involved): 0.069001\n",
       "Epoch 3/50\n",
-      "Epoch 3/50 - Train Loss: 0.007393 - Val Loss (simple RMSE, no physics involved): 0.069202\n",
+      "Epoch 3/50 - Train Loss: 0.007410 - Val Loss (simple RMSE, no physics involved): 0.069269\n",
       "Epoch 4/50\n",
-      "Epoch 4/50 - Train Loss: 0.007283 - Val Loss (simple RMSE, no physics involved): 0.073100\n",
+      "Epoch 4/50 - Train Loss: 0.007297 - Val Loss (simple RMSE, no physics involved): 0.073240\n",
       "Epoch 5/50\n",
-      "Epoch 5/50 - Train Loss: 0.007205 - Val Loss (simple RMSE, no physics involved): 0.072101\n",
+      "Epoch 5/50 - Train Loss: 0.007227 - Val Loss (simple RMSE, no physics involved): 0.072205\n",
       "Epoch 6/50\n",
-      "Epoch 6/50 - Train Loss: 0.007277 - Val Loss (simple RMSE, no physics involved): 0.069022\n",
+      "Epoch 6/50 - Train Loss: 0.007300 - Val Loss (simple RMSE, no physics involved): 0.068813\n",
       "Epoch 7/50\n",
-      "Epoch 7/50 - Train Loss: 0.007064 - Val Loss (simple RMSE, no physics involved): 0.067482\n",
+      "Epoch 7/50 - Train Loss: 0.007085 - Val Loss (simple RMSE, no physics involved): 0.067557\n",
       "Epoch 8/50\n",
-      "Epoch 8/50 - Train Loss: 0.006969 - Val Loss (simple RMSE, no physics involved): 0.075144\n",
+      "Epoch 8/50 - Train Loss: 0.007003 - Val Loss (simple RMSE, no physics involved): 0.075399\n",
       "Epoch 9/50\n",
-      "Epoch 9/50 - Train Loss: 0.007103 - Val Loss (simple RMSE, no physics involved): 0.074466\n",
+      "Epoch 9/50 - Train Loss: 0.007146 - Val Loss (simple RMSE, no physics involved): 0.074523\n",
       "Epoch 10/50\n",
-      "Epoch 10/50 - Train Loss: 0.007041 - Val Loss (simple RMSE, no physics involved): 0.068376\n",
+      "Epoch 10/50 - Train Loss: 0.007080 - Val Loss (simple RMSE, no physics involved): 0.068852\n",
       "Epoch 11/50\n",
-      "Epoch 11/50 - Train Loss: 0.006917 - Val Loss (simple RMSE, no physics involved): 0.071912\n",
+      "Epoch 11/50 - Train Loss: 0.006968 - Val Loss (simple RMSE, no physics involved): 0.072358\n",
       "Epoch 12/50\n",
-      "Epoch 12/50 - Train Loss: 0.006956 - Val Loss (simple RMSE, no physics involved): 0.065560\n",
+      "Epoch 12/50 - Train Loss: 0.007009 - Val Loss (simple RMSE, no physics involved): 0.065770\n",
       "Epoch 13/50\n",
-      "Epoch 13/50 - Train Loss: 0.006922 - Val Loss (simple RMSE, no physics involved): 0.067427\n",
+      "Epoch 13/50 - Train Loss: 0.006982 - Val Loss (simple RMSE, no physics involved): 0.067502\n",
       "Epoch 14/50\n",
-      "Epoch 14/50 - Train Loss: 0.006914 - Val Loss (simple RMSE, no physics involved): 0.065257\n",
+      "Epoch 14/50 - Train Loss: 0.006971 - Val Loss (simple RMSE, no physics involved): 0.065417\n",
       "Epoch 15/50\n",
-      "Epoch 15/50 - Train Loss: 0.006870 - Val Loss (simple RMSE, no physics involved): 0.067122\n",
+      "Epoch 15/50 - Train Loss: 0.006940 - Val Loss (simple RMSE, no physics involved): 0.066966\n",
       "Epoch 16/50\n",
-      "Epoch 16/50 - Train Loss: 0.006860 - Val Loss (simple RMSE, no physics involved): 0.065147\n",
+      "Epoch 16/50 - Train Loss: 0.006934 - Val Loss (simple RMSE, no physics involved): 0.065409\n",
       "Epoch 17/50\n",
-      "Epoch 17/50 - Train Loss: 0.006891 - Val Loss (simple RMSE, no physics involved): 0.064906\n",
+      "Epoch 17/50 - Train Loss: 0.006962 - Val Loss (simple RMSE, no physics involved): 0.065264\n",
       "Epoch 18/50\n",
-      "Epoch 18/50 - Train Loss: 0.006828 - Val Loss (simple RMSE, no physics involved): 0.064850\n",
+      "Epoch 18/50 - Train Loss: 0.006908 - Val Loss (simple RMSE, no physics involved): 0.065182\n",
       "Epoch 19/50\n",
-      "Epoch 19/50 - Train Loss: 0.006881 - Val Loss (simple RMSE, no physics involved): 0.065354\n",
+      "Epoch 19/50 - Train Loss: 0.006964 - Val Loss (simple RMSE, no physics involved): 0.065547\n",
       "Epoch 20/50\n",
-      "Epoch 20/50 - Train Loss: 0.006889 - Val Loss (simple RMSE, no physics involved): 0.069510\n",
+      "Epoch 20/50 - Train Loss: 0.006973 - Val Loss (simple RMSE, no physics involved): 0.069210\n",
       "Epoch 21/50\n",
-      "Epoch 21/50 - Train Loss: 0.006851 - Val Loss (simple RMSE, no physics involved): 0.065802\n",
+      "Epoch 21/50 - Train Loss: 0.006955 - Val Loss (simple RMSE, no physics involved): 0.065724\n",
       "Epoch 22/50\n",
-      "Epoch 22/50 - Train Loss: 0.006877 - Val Loss (simple RMSE, no physics involved): 0.065916\n",
+      "Epoch 22/50 - Train Loss: 0.006979 - Val Loss (simple RMSE, no physics involved): 0.065965\n",
       "Epoch 23/50\n",
-      "Epoch 23/50 - Train Loss: 0.006793 - Val Loss (simple RMSE, no physics involved): 0.070304\n",
+      "Epoch 23/50 - Train Loss: 0.006890 - Val Loss (simple RMSE, no physics involved): 0.070663\n",
       "Epoch 24/50\n",
-      "Epoch 24/50 - Train Loss: 0.006763 - Val Loss (simple RMSE, no physics involved): 0.065249\n",
+      "Epoch 24/50 - Train Loss: 0.006866 - Val Loss (simple RMSE, no physics involved): 0.065342\n",
       "Epoch 25/50\n",
-      "Epoch 25/50 - Train Loss: 0.006775 - Val Loss (simple RMSE, no physics involved): 0.065995\n",
+      "Epoch 25/50 - Train Loss: 0.006887 - Val Loss (simple RMSE, no physics involved): 0.065662\n",
       "Epoch 26/50\n",
-      "Epoch 26/50 - Train Loss: 0.006719 - Val Loss (simple RMSE, no physics involved): 0.066051\n",
+      "Epoch 26/50 - Train Loss: 0.006825 - Val Loss (simple RMSE, no physics involved): 0.066208\n",
       "Epoch 27/50\n",
-      "Epoch 27/50 - Train Loss: 0.006716 - Val Loss (simple RMSE, no physics involved): 0.068841\n",
+      "Epoch 27/50 - Train Loss: 0.006828 - Val Loss (simple RMSE, no physics involved): 0.068261\n",
       "Epoch 28/50\n",
-      "Epoch 28/50 - Train Loss: 0.006844 - Val Loss (simple RMSE, no physics involved): 0.076697\n",
+      "Epoch 28/50 - Train Loss: 0.006941 - Val Loss (simple RMSE, no physics involved): 0.076667\n",
       "Epoch 29/50\n",
-      "Epoch 29/50 - Train Loss: 0.006782 - Val Loss (simple RMSE, no physics involved): 0.068179\n",
+      "Epoch 29/50 - Train Loss: 0.006883 - Val Loss (simple RMSE, no physics involved): 0.068013\n",
       "Epoch 30/50\n",
-      "Epoch 30/50 - Train Loss: 0.006759 - Val Loss (simple RMSE, no physics involved): 0.066117\n",
+      "Epoch 30/50 - Train Loss: 0.006888 - Val Loss (simple RMSE, no physics involved): 0.065562\n",
       "Epoch 31/50\n",
-      "Epoch 31/50 - Train Loss: 0.006802 - Val Loss (simple RMSE, no physics involved): 0.066606\n",
+      "Epoch 31/50 - Train Loss: 0.006904 - Val Loss (simple RMSE, no physics involved): 0.066152\n",
       "Epoch 32/50\n",
-      "Epoch 32/50 - Train Loss: 0.006674 - Val Loss (simple RMSE, no physics involved): 0.067859\n",
+      "Epoch 32/50 - Train Loss: 0.006815 - Val Loss (simple RMSE, no physics involved): 0.067878\n",
       "Epoch 33/50\n",
-      "Epoch 33/50 - Train Loss: 0.006647 - Val Loss (simple RMSE, no physics involved): 0.067024\n",
+      "Epoch 33/50 - Train Loss: 0.006785 - Val Loss (simple RMSE, no physics involved): 0.066949\n",
       "Epoch 34/50\n",
-      "Epoch 34/50 - Train Loss: 0.006675 - Val Loss (simple RMSE, no physics involved): 0.064955\n",
+      "Epoch 34/50 - Train Loss: 0.006833 - Val Loss (simple RMSE, no physics involved): 0.064873\n",
       "Epoch 35/50\n",
-      "Epoch 35/50 - Train Loss: 0.006696 - Val Loss (simple RMSE, no physics involved): 0.067496\n",
+      "Epoch 35/50 - Train Loss: 0.006855 - Val Loss (simple RMSE, no physics involved): 0.067077\n",
       "Epoch 36/50\n",
-      "Epoch 36/50 - Train Loss: 0.006627 - Val Loss (simple RMSE, no physics involved): 0.068143\n",
+      "Epoch 36/50 - Train Loss: 0.006777 - Val Loss (simple RMSE, no physics involved): 0.067710\n",
       "Epoch 37/50\n",
-      "Epoch 37/50 - Train Loss: 0.006663 - Val Loss (simple RMSE, no physics involved): 0.067380\n",
+      "Epoch 37/50 - Train Loss: 0.006810 - Val Loss (simple RMSE, no physics involved): 0.067355\n",
       "Epoch 38/50\n",
-      "Epoch 38/50 - Train Loss: 0.006633 - Val Loss (simple RMSE, no physics involved): 0.066331\n",
+      "Epoch 38/50 - Train Loss: 0.006791 - Val Loss (simple RMSE, no physics involved): 0.065996\n",
       "Epoch 39/50\n",
-      "Epoch 39/50 - Train Loss: 0.006696 - Val Loss (simple RMSE, no physics involved): 0.069500\n",
+      "Epoch 39/50 - Train Loss: 0.006858 - Val Loss (simple RMSE, no physics involved): 0.069394\n",
       "Epoch 40/50\n",
-      "Epoch 40/50 - Train Loss: 0.006653 - Val Loss (simple RMSE, no physics involved): 0.066527\n",
+      "Epoch 40/50 - Train Loss: 0.006817 - Val Loss (simple RMSE, no physics involved): 0.066399\n",
       "Epoch 41/50\n",
-      "Epoch 41/50 - Train Loss: 0.006665 - Val Loss (simple RMSE, no physics involved): 0.067259\n",
+      "Epoch 41/50 - Train Loss: 0.006840 - Val Loss (simple RMSE, no physics involved): 0.066693\n",
       "Epoch 42/50\n",
-      "Epoch 42/50 - Train Loss: 0.006606 - Val Loss (simple RMSE, no physics involved): 0.066966\n",
+      "Epoch 42/50 - Train Loss: 0.006768 - Val Loss (simple RMSE, no physics involved): 0.067217\n",
       "Epoch 43/50\n",
-      "Epoch 43/50 - Train Loss: 0.006659 - Val Loss (simple RMSE, no physics involved): 0.065461\n",
+      "Epoch 43/50 - Train Loss: 0.006824 - Val Loss (simple RMSE, no physics involved): 0.065389\n",
       "Epoch 44/50\n",
-      "Epoch 44/50 - Train Loss: 0.006639 - Val Loss (simple RMSE, no physics involved): 0.067120\n",
+      "Epoch 44/50 - Train Loss: 0.006809 - Val Loss (simple RMSE, no physics involved): 0.067016\n",
       "Epoch 45/50\n",
-      "Epoch 45/50 - Train Loss: 0.006732 - Val Loss (simple RMSE, no physics involved): 0.068419\n",
+      "Epoch 45/50 - Train Loss: 0.006885 - Val Loss (simple RMSE, no physics involved): 0.069427\n",
       "Epoch 46/50\n",
-      "Epoch 46/50 - Train Loss: 0.006629 - Val Loss (simple RMSE, no physics involved): 0.069480\n",
+      "Epoch 46/50 - Train Loss: 0.006822 - Val Loss (simple RMSE, no physics involved): 0.068755\n",
       "Epoch 47/50\n",
-      "Epoch 47/50 - Train Loss: 0.006589 - Val Loss (simple RMSE, no physics involved): 0.070155\n",
+      "Epoch 47/50 - Train Loss: 0.006769 - Val Loss (simple RMSE, no physics involved): 0.069781\n",
       "Epoch 48/50\n",
-      "Epoch 48/50 - Train Loss: 0.006553 - Val Loss (simple RMSE, no physics involved): 0.071520\n",
+      "Epoch 48/50 - Train Loss: 0.006745 - Val Loss (simple RMSE, no physics involved): 0.070004\n",
       "Epoch 49/50\n",
-      "Epoch 49/50 - Train Loss: 0.006681 - Val Loss (simple RMSE, no physics involved): 0.070266\n",
+      "Epoch 49/50 - Train Loss: 0.006858 - Val Loss (simple RMSE, no physics involved): 0.069768\n",
       "Epoch 50/50\n",
-      "Epoch 50/50 - Train Loss: 0.006580 - Val Loss (simple RMSE, no physics involved): 0.065326\n",
-      "Training time: 305.29441952705383\n",
-      "Model saved as best_MLP_no2_MSE_allyears.pth in Model folder\n"
+      "Epoch 50/50 - Train Loss: 0.006800 - Val Loss (simple RMSE, no physics involved): 0.065065\n",
+      "Training time: 283.5457212924957\n"
      ]
     }
    ],
@@ -1493,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1501,9 +1500,9 @@
      "output_type": "stream",
      "text": [
       "Test MSE Loss: 59.653010\n",
-      "Test RMSE Loss: 6.568753\n",
+      "Test RMSE Loss: 6.691375\n",
       "Test SMAPE Loss: 26.350127%\n",
-      "Total Inference Time: 0.39 seconds\n"
+      "Total Inference Time: 0.17 seconds\n"
      ]
     }
    ],
@@ -1525,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
