--- a/src/run_mlp_pde_nmer_const_allyears.ipynb
+++ b/src/run_mlp_pde_nmer_const_allyears.ipynb
@@ -36,14 +36,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting script...\n"
+      "Starting script...\n",
+      "\n",
+      "Running __init__.py for data pipeline...\n",
+      "Modelling package initialized\n",
+      "\n"
      ]
     }
    ],
@@ -80,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +119,7 @@
        "PosixPath('/home/rachel/forecasting_smog_PEML/src')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +139,7 @@
        "<module 'config' from '/home/rachel/forecasting_smog_PEML/src/config.py'>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -172,10 +176,10 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f318d0e1fb0>"
+       "<torch._C.Generator at 0x7f175606dfb0>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,16 +207,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f318d0e1fb0>"
+       "<torch._C.Generator at 0x7f175606dfb0>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +244,7 @@
      "output_type": "stream",
      "text": [
       "Using all years\n",
-      "Y_PHY_FILENAME y_phy_batchsize16_PDE_nmer_const_allyears.pkl\n",
+      "Y_PHY_FILENAME y_phy_batchsize16_PDE_nmer_const_allyears\n",
       "MINMAX_PATH:  /home/rachel/forecasting_smog_PEML/data/data_combined/all_years/pollutants_minmax_allyears.csv\n",
       "DATASET_PATH:  /home/rachel/forecasting_smog_PEML/data/data_combined/all_years\n",
       "MODEL_PATH_NAME:  best_MLP_no2_PDE_nmer_const_allyears.pth\n",
@@ -267,7 +271,7 @@
     "else:\n",
     "    raise ValueError(\"Invalid years selected\")\n",
     "\n",
-    "Y_PHY_FILENAME = f\"y_phy_batchsize16_{LOSS_FUNC}_{years}.pkl\"\n",
+    "Y_PHY_FILENAME = f\"y_phy_batchsize16_{LOSS_FUNC}_{years}\"\n",
     "MODEL_PATH_NAME = f'best_{NN_TYPE}_no2_{LOSS_FUNC}_{years}.pth'\n",
     "RESULTS_METRICS_FILENAME = f'results_{NN_TYPE}_no2_{LOSS_FUNC}_{years}.csv'\n",
     "BESTPARAMS_FILENAME = f'best_params_{NN_TYPE}_no2_{LOSS_FUNC}_{years}.txt'\n",
@@ -292,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +515,7 @@
        " [2640 rows x 10 columns]]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +717,7 @@
        " [2640 rows x 10 columns]]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +811,7 @@
        " [2640 rows x 1 columns]]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -818,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +831,7 @@
        "72"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -838,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -990,7 +994,7 @@
        "         0.6475]])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1001,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1037,7 @@
        "        [0.1017]])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1044,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1080,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1105,7 @@
        "Name: NO2_TUINDORP, Length: 3648, dtype: float64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1112,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1133,7 +1137,7 @@
        "Name: NO2_BREUKELEN, Length: 3648, dtype: float64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1144,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1165,7 +1169,7 @@
        "Name: DD, Length: 3648, dtype: float64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1176,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1197,7 +1201,7 @@
        "Name: FH, Length: 3648, dtype: float64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1217,30 +1221,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Computing from Habrok since it takes a long time (ran by converting this notebook to script -> interactive)"
+    "### Computing from Habrok since it takes a long time (ran by converting this notebook to script -> interactive)\n",
+    "### Also ran this in 4 chunks (10 batches for first 3 chunks, and 11 batches for last chunk) due to OOM on Habrok"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "phy_path:  /home/rachel/forecasting_smog_PEML/src/physics_outputs/y_phy_batchsize16_PDE_nmer_const_2017.pkl\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "from itertools import islice\n",
+    "\n",
+    "def get_dataloader_chunk(dataloader, start, end):\n",
+    "    \"\"\"Extracts a chunk of the DataLoader from start to end.\"\"\"\n",
+    "    return list(islice(dataloader, start, end))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Create train & validation loaders (following the original code)\n",
     "temp_batch_size = 16\n",
+    "# Extract different batch chunks manually\n",
     "temp_train_loader = DataLoader(train_dataset, batch_size=temp_batch_size, shuffle=True)\n",
     "temp_val_loader = DataLoader(val_dataset, batch_size=temp_batch_size, shuffle=False)\n",
-    "phy_path = f\"{PHY_OUTPUT_PATH}/{Y_PHY_FILENAME}\"\n",
-    "print(\"phy_path: \", phy_path)\n",
-    "# precompute_y_phy_for_all_batches_eq1(temp_train_loader, output_file = phy_path)"
+    "\n",
+    "\n",
+    "# first_10_batches = get_dataloader_chunk(temp_train_loader, 0, 10)\n",
+    "# second_10_batches = get_dataloader_chunk(temp_train_loader, 10, 20)\n",
+    "# third_10_batches = get_dataloader_chunk(temp_train_loader, 20, 30)\n",
+    "# fourth_10_batches = get_dataloader_chunk(temp_train_loader, 30, 41)\n",
+    "# print(f\"length of dataloader: {len(temp_train_loader)}\")\n",
+    "\n",
+    "# print(f\"First 10 batches count: {len(first_10_batches)}\")\n",
+    "# print(f\"Second 10 batches count: {len(second_10_batches)}\")\n",
+    "# print(f\"Third 10 batches count: {len(third_10_batches)}\")\n",
+    "# print(f\"Fourth batch count: {len(fourth_10_batches)} (should be 11 if dataset has 41 batches)\")\n",
+    "\n",
+    "\n",
+    "# phy_path = f\"{PHY_OUTPUT_PATH}/{Y_PHY_FILENAME}_1.pkl\"\n",
+    "# print(\"first 10 batches phy_path: \", phy_path)\n",
+    "# precompute_y_phy_for_all_batches_eq1(first_10_batches, output_file = phy_path)\n"
    ]
   },
   {
@@ -1253,77 +1278,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading y_phy from file /home/rachel/forecasting_smog_PEML/src/physics_outputs/y_phy_batchsize16_PDE_nmer_const_2017.pkl\n",
-      "Concatenated all_y_phy shape: torch.Size([104, 24, 1])\n"
+      "Loading y_phy from file /home/rachel/forecasting_smog_PEML/src/physics_outputs/y_phy_batchsize16_PDE_nmer_const_allyears_full.pkl\n",
+      "all_y_phy shape: (41, 16, 24, 1)\n"
      ]
     }
    ],
    "source": [
     "# Load it back\n",
-    "print(f\"Loading y_phy from file {phy_path}\")\n",
+    "combined_phy_path = f\"{PHY_OUTPUT_PATH}/{Y_PHY_FILENAME}_full.pkl\"\n",
+    "print(f\"Loading y_phy from file {combined_phy_path}\")\n",
     "\n",
-    "with open(phy_path, \"rb\") as f:\n",
+    "with open(combined_phy_path, \"rb\") as f:\n",
     "    all_y_phy = pickle.load(f)  # List of tensors\n",
     "\n",
-    "# Convert list of batches into a single tensor\n",
-    "all_y_phy = torch.cat(all_y_phy, dim=0)  # Shape: (total_samples, N_HOURS_Y, 1)\n",
-    "\n",
-    "print(f\"Concatenated all_y_phy shape: {all_y_phy.shape}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Printing shapes of all y_phy for a certain batch to make sure it will work for training"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total samples: 104, Number of batches: 6\n",
-      "Batch 0: Shape torch.Size([16, 24, 1])\n",
-      "Batch 1: Shape torch.Size([16, 24, 1])\n",
-      "Batch 2: Shape torch.Size([16, 24, 1])\n",
-      "Batch 3: Shape torch.Size([16, 24, 1])\n",
-      "Batch 4: Shape torch.Size([16, 24, 1])\n",
-      "Batch 5: Shape torch.Size([16, 24, 1])\n",
-      "Last batch: Shape torch.Size([8, 24, 1])\n"
-     ]
-    }
-   ],
-   "source": [
-    "temp_batch_size = 16  # Set your batch size\n",
-    "total_samples = all_y_phy.shape[0]\n",
-    "num_batches = total_samples // temp_batch_size\n",
-    "\n",
-    "print(f\"Total samples: {total_samples}, Number of batches: {num_batches}\")\n",
-    "\n",
-    "# Loop through batches and print their shape\n",
-    "for batch_idx in range(num_batches):\n",
-    "    batch_start = batch_idx * temp_batch_size\n",
-    "    batch_end = batch_start + temp_batch_size\n",
-    "    y_phy_batch = all_y_phy[batch_start:batch_end]  # Extract batch\n",
-    "\n",
-    "    print(f\"Batch {batch_idx}: Shape {y_phy_batch.shape}\")\n",
-    "\n",
-    "# Handle last batch if dataset isn't evenly divisible\n",
-    "if total_samples % temp_batch_size != 0:\n",
-    "    y_phy_batch = all_y_phy[num_batches * temp_batch_size:]\n",
-    "    print(f\"Last batch: Shape {y_phy_batch.shape}\")\n"
+    "print(f\"all_y_phy shape: {all_y_phy.shape}\")"
    ]
   },
   {
@@ -1335,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1348,24 +1323,48 @@
       "Batch 3 matches shape: torch.Size([16, 24, 1])\n",
       "Batch 4 matches shape: torch.Size([16, 24, 1])\n",
       "Batch 5 matches shape: torch.Size([16, 24, 1])\n",
-      "Batch 6 matches shape: torch.Size([8, 24, 1])\n"
+      "Batch 6 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 7 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 8 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 9 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 10 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 11 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 12 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 13 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 14 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 15 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 16 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 17 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 18 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 19 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 20 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 21 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 22 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 23 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 24 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 25 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 26 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 27 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 28 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 29 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 30 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 31 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 32 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 33 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 34 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 35 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 36 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 37 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 38 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 39 matches shape: torch.Size([16, 24, 1])\n",
+      "Batch 40 matches shape: torch.Size([16, 24, 1])\n"
      ]
     }
    ],
    "source": [
     "for i, (data, output) in enumerate(temp_train_loader):  # train_loader yields (input_data, labels)\n",
-    "    batch_size = output.shape[0]  # Get batch size dynamically\n",
     "\n",
-    "    # Extract the corresponding batch from all_y_phy\n",
-    "    batch_start = i * batch_size\n",
-    "    batch_end = batch_start + batch_size\n",
-    "\n",
-    "    # Ensure we don't go out of bounds\n",
-    "    if batch_end > all_y_phy.shape[0]:\n",
-    "        y_phy_batch = all_y_phy[batch_start:]  # Last batch (might be smaller)\n",
-    "    else:\n",
-    "        y_phy_batch = all_y_phy[batch_start:batch_end]\n",
-    "\n",
+    "    y_phy_batch = all_y_phy[i]  # Get corresponding precomputed physics output\n",
     "    # Compare shapes\n",
     "    if output.shape == y_phy_batch.shape:\n",
     "        print(f\"Batch {i} matches shape: {output.shape}\")\n",
@@ -1382,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1405,13 +1404,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "batch_size = 16 # set as 16 and freeze it for now\n",
     "def objective(trial):\n",
     "    # Define hyperparameters to search over\n",
     "    n_hidden_layers = trial.suggest_int(\"n_hidden_layers\", 1, 5)\n",
     "    n_hidden_units = trial.suggest_int(\"n_hidden_units\", 32, 256)\n",
     "    lr = trial.suggest_loguniform(\"lr\", 1e-5, 1e-2)\n",
     "    weight_decay = trial.suggest_loguniform(\"weight_decay\", 1e-8, 1e-3)\n",
-    "    batch_size = trial.suggest_categorical(\"batch_size\", [8, 16, 32, 64])\n",
     "    lambda_phy = trial.suggest_loguniform(\"lambda_phy\", 1e-5, 1e-1)\n",
     "\n",
     "    train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
