minor fixing and deleting some useless old functions, waiting for computing eq2 y phy

--- a/src/run_mlp_pde_nmer_const_allyears.ipynb
+++ b/src/run_mlp_pde_nmer_const_allyears.ipynb
@@ -1214,33 +1214,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Computing y_phy 2017 with eq 1 PDE numerical solver"
+    "## Getting y_phy all years with eq 1 PDE numerical solver"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Computing from Habrok since it takes a long time (ran by converting this notebook to script -> interactive)\n",
+    "### Computed y phy OFFLINE in file ``run_pde_compute_y_phy.py`` script and saved to a file\n",
     "### Also ran this in 4 chunks (10 batches for first 3 chunks, and 11 batches for last chunk) due to OOM on Habrok"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from itertools import islice\n",
-    "\n",
-    "def get_dataloader_chunk(dataloader, start, end):\n",
-    "    \"\"\"Extracts a chunk of the DataLoader from start to end.\"\"\"\n",
-    "    return list(islice(dataloader, start, end))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1249,23 +1236,7 @@
     "# Extract different batch chunks manually\n",
     "temp_train_loader = DataLoader(train_dataset, batch_size=temp_batch_size, shuffle=True)\n",
     "temp_val_loader = DataLoader(val_dataset, batch_size=temp_batch_size, shuffle=False)\n",
-    "\n",
-    "\n",
-    "# first_10_batches = get_dataloader_chunk(temp_train_loader, 0, 10)\n",
-    "# second_10_batches = get_dataloader_chunk(temp_train_loader, 10, 20)\n",
-    "# third_10_batches = get_dataloader_chunk(temp_train_loader, 20, 30)\n",
-    "# fourth_10_batches = get_dataloader_chunk(temp_train_loader, 30, 41)\n",
-    "# print(f\"length of dataloader: {len(temp_train_loader)}\")\n",
-    "\n",
-    "# print(f\"First 10 batches count: {len(first_10_batches)}\")\n",
-    "# print(f\"Second 10 batches count: {len(second_10_batches)}\")\n",
-    "# print(f\"Third 10 batches count: {len(third_10_batches)}\")\n",
-    "# print(f\"Fourth batch count: {len(fourth_10_batches)} (should be 11 if dataset has 41 batches)\")\n",
-    "\n",
-    "\n",
-    "# phy_path = f\"{PHY_OUTPUT_PATH}/{Y_PHY_FILENAME}_1.pkl\"\n",
-    "# print(\"first 10 batches phy_path: \", phy_path)\n",
-    "# precompute_y_phy_for_all_batches_eq1(first_10_batches, output_file = phy_path)\n"
+    "print(\"Train loader length: \", len(temp_train_loader))"
    ]
   },
   {
