--- a/src/run_mlp_pinn_allyears.ipynb
+++ b/src/run_mlp_pinn_allyears.ipynb
@@ -175,7 +175,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f4f91cd1fb0>"
+       "<torch._C.Generator at 0x7f66dae09fb0>"
       ]
      },
      "execution_count": 6,
@@ -212,7 +212,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f4f91cd1fb0>"
+       "<torch._C.Generator at 0x7f66dae09fb0>"
       ]
      },
      "execution_count": 7,
@@ -1218,14 +1218,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tuning with loss function:  PDE_nmer_const\n",
+      "tuning with loss function:  PINN\n",
       "tuning with nn type:  MLP\n"
      ]
     }
@@ -1403,118 +1403,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_params = {'n_hidden_layers': 4, 'n_hidden_units': 191, 'lr': 0.0002099693529342787, 'weight_decay': 3.4334611075297167e-07, 'batch_size': 8, 'lambda_phy': 3.4051270015813734e-05}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/50\n",
-      "Epoch 1/50 - Train Loss: 0.014051 - Val Loss (simple RMSE, no physics involved): 0.076899\n",
-      "Epoch 2/50\n",
-      "Epoch 2/50 - Train Loss: 0.007900 - Val Loss (simple RMSE, no physics involved): 0.069073\n",
-      "Epoch 3/50\n",
-      "Epoch 3/50 - Train Loss: 0.007358 - Val Loss (simple RMSE, no physics involved): 0.069355\n",
-      "Epoch 4/50\n",
-      "Epoch 4/50 - Train Loss: 0.007148 - Val Loss (simple RMSE, no physics involved): 0.069251\n",
-      "Epoch 5/50\n",
-      "Epoch 5/50 - Train Loss: 0.007158 - Val Loss (simple RMSE, no physics involved): 0.066978\n",
-      "Epoch 6/50\n",
-      "Epoch 6/50 - Train Loss: 0.007044 - Val Loss (simple RMSE, no physics involved): 0.067068\n",
-      "Epoch 7/50\n",
-      "Epoch 7/50 - Train Loss: 0.007073 - Val Loss (simple RMSE, no physics involved): 0.066697\n",
-      "Epoch 8/50\n",
-      "Epoch 8/50 - Train Loss: 0.007035 - Val Loss (simple RMSE, no physics involved): 0.068645\n",
-      "Epoch 9/50\n",
-      "Epoch 9/50 - Train Loss: 0.006974 - Val Loss (simple RMSE, no physics involved): 0.069361\n",
-      "Epoch 10/50\n",
-      "Epoch 10/50 - Train Loss: 0.006999 - Val Loss (simple RMSE, no physics involved): 0.066329\n",
-      "Epoch 11/50\n",
-      "Epoch 11/50 - Train Loss: 0.007152 - Val Loss (simple RMSE, no physics involved): 0.068223\n",
-      "Epoch 12/50\n",
-      "Epoch 12/50 - Train Loss: 0.006963 - Val Loss (simple RMSE, no physics involved): 0.066633\n",
-      "Epoch 13/50\n",
-      "Epoch 13/50 - Train Loss: 0.006963 - Val Loss (simple RMSE, no physics involved): 0.067017\n",
-      "Epoch 14/50\n",
-      "Epoch 14/50 - Train Loss: 0.006987 - Val Loss (simple RMSE, no physics involved): 0.068599\n",
-      "Epoch 15/50\n",
-      "Epoch 15/50 - Train Loss: 0.006936 - Val Loss (simple RMSE, no physics involved): 0.066135\n",
-      "Epoch 16/50\n",
-      "Epoch 16/50 - Train Loss: 0.006931 - Val Loss (simple RMSE, no physics involved): 0.076010\n",
-      "Epoch 17/50\n",
-      "Epoch 17/50 - Train Loss: 0.006921 - Val Loss (simple RMSE, no physics involved): 0.067190\n",
-      "Epoch 18/50\n",
-      "Epoch 18/50 - Train Loss: 0.006937 - Val Loss (simple RMSE, no physics involved): 0.068858\n",
-      "Epoch 19/50\n",
-      "Epoch 19/50 - Train Loss: 0.007096 - Val Loss (simple RMSE, no physics involved): 0.065632\n",
-      "Epoch 20/50\n",
-      "Epoch 20/50 - Train Loss: 0.006981 - Val Loss (simple RMSE, no physics involved): 0.065552\n",
-      "Epoch 21/50\n",
-      "Epoch 21/50 - Train Loss: 0.006847 - Val Loss (simple RMSE, no physics involved): 0.069029\n",
-      "Epoch 22/50\n",
-      "Epoch 22/50 - Train Loss: 0.006821 - Val Loss (simple RMSE, no physics involved): 0.067233\n",
-      "Epoch 23/50\n",
-      "Epoch 23/50 - Train Loss: 0.007115 - Val Loss (simple RMSE, no physics involved): 0.065607\n",
-      "Epoch 24/50\n",
-      "Epoch 24/50 - Train Loss: 0.006947 - Val Loss (simple RMSE, no physics involved): 0.065955\n",
-      "Epoch 25/50\n",
-      "Epoch 25/50 - Train Loss: 0.006802 - Val Loss (simple RMSE, no physics involved): 0.067079\n",
-      "Epoch 26/50\n",
-      "Epoch 26/50 - Train Loss: 0.006832 - Val Loss (simple RMSE, no physics involved): 0.066518\n",
-      "Epoch 27/50\n",
-      "Epoch 27/50 - Train Loss: 0.006785 - Val Loss (simple RMSE, no physics involved): 0.066230\n",
-      "Epoch 28/50\n",
-      "Epoch 28/50 - Train Loss: 0.006830 - Val Loss (simple RMSE, no physics involved): 0.067720\n",
-      "Epoch 29/50\n",
-      "Epoch 29/50 - Train Loss: 0.006778 - Val Loss (simple RMSE, no physics involved): 0.068274\n",
-      "Epoch 30/50\n",
-      "Epoch 30/50 - Train Loss: 0.006780 - Val Loss (simple RMSE, no physics involved): 0.072101\n",
-      "Epoch 31/50\n",
-      "Epoch 31/50 - Train Loss: 0.006909 - Val Loss (simple RMSE, no physics involved): 0.070050\n",
-      "Epoch 32/50\n",
-      "Epoch 32/50 - Train Loss: 0.006829 - Val Loss (simple RMSE, no physics involved): 0.065499\n",
-      "Epoch 33/50\n",
-      "Epoch 33/50 - Train Loss: 0.006903 - Val Loss (simple RMSE, no physics involved): 0.067231\n",
-      "Epoch 34/50\n",
-      "Epoch 34/50 - Train Loss: 0.006730 - Val Loss (simple RMSE, no physics involved): 0.065467\n",
-      "Epoch 35/50\n",
-      "Epoch 35/50 - Train Loss: 0.006817 - Val Loss (simple RMSE, no physics involved): 0.068496\n",
-      "Epoch 36/50\n",
-      "Epoch 36/50 - Train Loss: 0.006852 - Val Loss (simple RMSE, no physics involved): 0.065611\n",
-      "Epoch 37/50\n",
-      "Epoch 37/50 - Train Loss: 0.006851 - Val Loss (simple RMSE, no physics involved): 0.075838\n",
-      "Epoch 38/50\n",
-      "Epoch 38/50 - Train Loss: 0.006788 - Val Loss (simple RMSE, no physics involved): 0.067762\n",
-      "Epoch 39/50\n",
-      "Epoch 39/50 - Train Loss: 0.006730 - Val Loss (simple RMSE, no physics involved): 0.065913\n",
-      "Epoch 40/50\n",
-      "Epoch 40/50 - Train Loss: 0.006717 - Val Loss (simple RMSE, no physics involved): 0.067692\n",
-      "Epoch 41/50\n",
-      "Epoch 41/50 - Train Loss: 0.006707 - Val Loss (simple RMSE, no physics involved): 0.070931\n",
-      "Epoch 42/50\n",
-      "Epoch 42/50 - Train Loss: 0.006699 - Val Loss (simple RMSE, no physics involved): 0.068049\n",
-      "Epoch 43/50\n",
-      "Epoch 43/50 - Train Loss: 0.006753 - Val Loss (simple RMSE, no physics involved): 0.068054\n",
-      "Epoch 44/50\n",
-      "Epoch 44/50 - Train Loss: 0.006746 - Val Loss (simple RMSE, no physics involved): 0.066194\n",
-      "Epoch 45/50\n",
-      "Epoch 45/50 - Train Loss: 0.006723 - Val Loss (simple RMSE, no physics involved): 0.074063\n",
-      "Epoch 46/50\n",
-      "Epoch 46/50 - Train Loss: 0.006797 - Val Loss (simple RMSE, no physics involved): 0.065711\n",
-      "Epoch 47/50\n",
-      "Epoch 47/50 - Train Loss: 0.006749 - Val Loss (simple RMSE, no physics involved): 0.065685\n",
-      "Epoch 48/50\n",
-      "Epoch 48/50 - Train Loss: 0.006909 - Val Loss (simple RMSE, no physics involved): 0.068389\n",
-      "Epoch 49/50\n",
-      "Epoch 49/50 - Train Loss: 0.006805 - Val Loss (simple RMSE, no physics involved): 0.068596\n",
-      "Epoch 50/50\n",
-      "Epoch 50/50 - Train Loss: 0.006743 - Val Loss (simple RMSE, no physics involved): 0.066078\n",
-      "Training time: 118.46675848960876\n",
-      "Model saved as best_MLP_no2_PDE_nmer_const_allyears.pth in Model folder\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "torch.manual_seed(34)\n",
     "# Train the model with the best hyperparameters\n",
@@ -1527,8 +1427,8 @@
     ")\n",
     "\n",
     "# Create train & validation loaders with the best batch size\n",
-    "train_loader = DataLoader(train_dataset, batch_size=best_params[batch_size], shuffle=True)\n",
-    "val_loader = DataLoader(val_dataset, batch_size=best_params[batch_size], shuffle=False)\n",
+    "train_loader = DataLoader(train_dataset, batch_size=best_params[\"batch_size\"], shuffle=True)\n",
+    "val_loader = DataLoader(val_dataset, batch_size=best_params[\"batch_size\"], shuffle=False)\n",
     "\n",
     "# Train the model\n",
     "_, training_time = best_model.train_model(train_loader, val_loader, epochs=50, lr=best_params[\"lr\"], weight_decay=best_params[\"weight_decay\"], lambda_phy= best_params[\"lambda_phy\"], device=device)\n",
@@ -1561,7 +1461,7 @@
     "best_model.eval()\n",
     "\n",
     "# Create the DataLoader for the test dataset\n",
-    "test_loader = DataLoader(test_dataset, batch_size=best_params[batch_size], shuffle=False)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=best_params[\"batch_size\"], shuffle=False)\n",
     "\n",
     "# Evaluate the model on the test dataset\n",
     "df_minmax = pd.read_csv(MINMAX_PATH, sep=';')\n",
@@ -1677,7 +1577,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
